--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ html[data-theme="dark"] .aud-btn.active {
   <div class="dropdown-divider"></div>
 
   <div class="dropdown-header">NOVAK Standards (SP-1 → SP-9)</div>
-  <a href="docs/standards/SP-1 — NOVAK Execution Integrity Standard (Full GitHub-Ready Document).pdf" target="_blank">SP-1 — Execution Integrity</a>
+  <a href="docs/standards/SP-1 — NOVAK Execution Integrity Standard.pdf" target="_blank">SP-1 — Execution Integrity</a>
   <a href="docs/standards/SP-2 — HVET  EIR  RGAC Cryptographic Standard.pdf" target="_blank">SP-2 — HVET / EIR / RGAC</a>
   <a href="docs/standards/SP-3 — Safety Gate + PL-X + PS-X Standard.pdf" target="_blank">SP-3 — Safety Gate + PL-X</a>
   <a href="docs/standards/SP-4 — NOVAK Implementation Requirements.pdf" target="_blank">SP-4 — Implementation Spec</a>
