--- a/index.html
+++ b/index.html
@@ -831,7 +831,9 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- ✅ MAIN CONTENT START -->
 <div class="container">
 
-  <!-- ====================================================== -->
+      <h2 style="margin-top:0;">“If I told you we could prevent $100 billion a year in fraud, error, drift, and system failures — not detect it, prevent it — would you hear me out?”</h2>
+
+   <!-- ====================================================== -->
   <!-- ⭐ 60-SECOND NOVAK OVERVIEW — COLLAPSIBLE -->
   <!-- ====================================================== -->
   <details class="novak-collapse" style="margin-top:32px;">
