--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- ✅ MAIN CONTENT START -->
 <div class="container">
 
-      <h2 style="margin-top:0;">“If I told you we could prevent $100 billion a year in fraud, error, drift, and system failures — not detect it, prevent it — would you hear me out?”</h2>
+      <h2 style="margin-top:0;">If we could eliminate catastrophic system failures, prevent wrongful decisions, and save the government over $100 billion a year — not afterward, but at the moment of execution — would you hear me out and want see how?</h2>
 
    <!-- ====================================================== -->
   <!-- ⭐ 60-SECOND NOVAK OVERVIEW — COLLAPSIBLE -->
