--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
   padding: 10px 16px !important;
 }
 
-
 /* =============================== */
 /* NOVAK Documentation Dropdown    */
 /* =============================== */
@@ -633,8 +632,7 @@ html[data-theme="dark"] .aud-btn.active {
   <a href="docs/standards/SP-2 — HVET EIR RGAC Cryptographic Standard.pdf" target="_blank">Cryptography 101</a>
 
   <div class="dropdown-divider"></div>
-  
-  <div class="dropdown-header">NOVAK Standards (SP-1 → SP-9)</div>
+    <div class="dropdown-header">NOVAK Standards (SP-1 → SP-9)</div>
   <a href="docs/standards/SP-1 — NOVAK Execution Integrity Standard.pdf" target="_blank">SP-1 — Execution Integrity</a>
   <a href="docs/standards/SP-2 — HVET EIR RGAC Cryptographic Standard.pdf" target="_blank">SP-2 — HVET / EIR / RGAC</a>
   <a href="docs/standards/SP-3 — Safety Gate + PL-X + PS-X Standard.pdf" target="_blank">SP-3 — Safety Gate + PL-X</a>
@@ -646,7 +644,6 @@ html[data-theme="dark"] .aud-btn.active {
   <a href="docs/standards/SP-9 — NOVAK Federal Multi-Agency Deployment Standard.pdf" target="_blank">SP-9 — Multi-Domain Compliance</a>
 
   <div class="dropdown-divider"></div>
-
   <div class="dropdown-header">Threat Models (NTM-1 → NTM-3)</div>
   <a href="docs/threat-models/NTM-1 — NOVAK THREAT MODEL.pdf" target="_blank">NTM-1 — Base Threat Model</a>
   <a href="docs/threat-models/NTM-2 — NOVAK Red Team Adversarial Test Suite.pdf" target="_blank">NTM-2 — Red Team Test Suite</a>
@@ -654,7 +651,6 @@ html[data-theme="dark"] .aud-btn.active {
   <a href="docs/threat-models/NTM-3 — NOVAK Adversarial AI Test Suite (Full Formal Edition).pdf" target="_blank">NTM-3 — Adversarial Model</a>
 
   <div class="dropdown-divider"></div>
-
   <div class="dropdown-header">Whitepapers</div>
   <a href="docs/whitepapers/PART_1__Executive_Summary.pdf" target="_blank">PART 1 — Executive Summary</a>
   <a href="docs/whitepapers/PART 2 — WHAT NOVAK IS.pdf" target="_blank">PART 2 — What NOVAK Is</a>
@@ -668,7 +664,6 @@ html[data-theme="dark"] .aud-btn.active {
   <a href="docs/whitepapers/PART_10__Final_Summary.pdf" target="_blank">PART 10 — Final Summary</a>
 
   <div class="dropdown-divider"></div>
-
   <div class="dropdown-header">Appendices</div>
   <a href="docs/apendices/apendices/Appendix A — Adversarial Prompt Library.pdf" target="_blank">Appendix A — Glossary</a>
   <a href="docs/apendices/APPENDIX B GRADIENT-SPACE ADVERSARIAL SIMULATION VECTORS.pdf" target="_blank">Appendix B — Math Notation</a>
@@ -724,7 +719,6 @@ html[data-theme="dark"] .aud-btn.active {
     <div class="dropdown-divider"></div>
 
     <div class="dropdown-header">NOVAK Learning Series - SPs</div>
-
     <a href="docs/learning/NOVAK Learning Series - SP-1 Execution Integrity Standard.pdf" target="_blank">SP-1 Execution Integrity Standard</a>
     <a href="docs/learning/NOVAK Learning Series - SP-2 Cryptographic Standard.pdf" target="_blank">SP-2 Cryptographic Standard</a>
     <a href="docs/learning/NOVAK Learning Series - SP-3 Safety Gate Standard.pdf" target="_blank">SP-3 Safety Gate Standard</a>
@@ -738,7 +732,6 @@ html[data-theme="dark"] .aud-btn.active {
     <div class="dropdown-divider"></div>
 
     <div class="dropdown-header">NOVAK Learning Series - LAWS</div>
-
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L0 The Prime Directive.pdf" target="_blank">Law L0 The Prime Directive (Zeroth Law)</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L1 Deterministic Rule Execution.pdf" target="_blank">Law L1 Deterministic Rule Execution</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L2 Rule Hash.pdf" target="_blank">Law L2 Rule Hash</a>
@@ -757,13 +750,11 @@ html[data-theme="dark"] .aud-btn.active {
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L15 Full Disclosure Rule.pdf" target="_blank">Law L15 Full Disclosure Rule</a>
 
     <div class="dropdown-header">NOVAK Learning Series - LAWS Addenda</div>
-
     <a href="docs/learning/NOVAK Learning Series - Industry Addenda PL-X & PS-X.pdf" target="_blank">Industry Addenda PL-X & PS-X</a>
 
     <div class="dropdown-divider"></div>
-
+	
     <div class="dropdown-header">NOVAK Learning Series - Threat Models</div>
-
     <a href="docs/learning/NOVAK Learning Series - NTM-1 NOVAK Threat Model.pdf" target="_blank">NTM-1 NOVAK Threat Model</a>
     <a href="docs/learning/NOVAK Learning Series - NTM-2 Red Team Adversarial Test Suite.pdf" target="_blank">NTM-2 Red Team Adversarial Test Suite</a>
     <a href="docs/learning/NOVAK Learning Series - NTM-3 Adversarial AI Test Suite.pdf" target="_blank">NTM-3 Adversarial AI Test Suite</a>
@@ -774,7 +765,6 @@ html[data-theme="dark"] .aud-btn.active {
     <div class="dropdown-divider"></div>
 
     <div class="dropdown-header">NOVAK Learning Series - Novak Overview</div>
-
     <a href="docs/learning/NOVAK Learning Series - NOVAK Part 1 Executive Summary.pdf" target="_blank">Part 1 Executive Summary</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Part 2 - What Novak Is.pdf" target="_blank">Part 2 - What Novak Is</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Part 3 Scientific Foundations.pdf" target="_blank">Part 3 Scientific Foundations</a>
@@ -805,7 +795,6 @@ html[data-theme="dark"] .aud-btn.active {
     <div class="dropdown-divider"></div>
 
     <div class="dropdown-header">Core Docs</div>
-
     <a href="docs/NOVAK_Architecture.pdf" target="_blank">📐 Architecture</a>
     <a href="docs/NOVAK_LightPaper.pdf" target="_blank">💡 Light Paper</a>
     <a href="docs/NOVAK_Executive_Brief.pdf" target="_blank">📊 Executive Brief</a>
@@ -958,25 +947,15 @@ html[data-theme="dark"] .aud-btn.active {
       to execute.
     </p>
 
-    <!-- Close X -->
-    <button onclick="dismissWhatIsNovak()"
-      style="
-        position:absolute;
-        top:14px;
-        right:14px;
-        background:none;
-        border:none;
-        font-size:20px;
-        cursor:pointer;
-      "
-      aria-label="Hide What is NOVAK section">
-      ✕
-    </button>
+<button class="action-btn" onclick="hideSection('whatIsNovakCard','hideWhatIsNovak')">
+  ✅ Got it — Hide
+</button>
 
-    <!-- Confirm hide -->
-    <button onclick="dismissWhatIsNovak()" class="action-btn" style="margin-top:18px;">
-      ✅ Got it — Hide
-    </button>
+<button onclick="hideSection('whatIsNovakCard','hideWhatIsNovak')"
+  style="position:absolute; top:14px; right:14px; background:none; border:none; font-size:20px; cursor:pointer;">
+  ✕
+</button>
+
   </div>
 
     <!-- WHY NOVAK — WHY NOW? -->
@@ -1004,25 +983,15 @@ html[data-theme="dark"] .aud-btn.active {
       proof-before-action execution integrity.
     </p>
 
-    <!-- Close X -->
-    <button onclick="dismissWhyNovak()"
-      style="
-        position:absolute;
-        top:14px;
-        right:14px;
-        background:none;
-        border:none;
-        font-size:20px;
-        cursor:pointer;
-      "
-      aria-label="Hide Why NOVAK section">
-      ✕
-    </button>
+<button class="action-btn" onclick="hideSection('whyNovakCard','hideWhyNovak')">
+  ✅ Got it — Hide
+</button>
 
-    <!-- Confirm hide -->
-    <button onclick="dismissWhyNovak()" class="action-btn" style="margin-top:18px;">
-      ✅ Got it — Hide
-    </button>
+<button onclick="hideSection('whyNovakCard','hideWhyNovak')"
+  style="position:absolute; top:14px; right:14px; background:none; border:none; font-size:20px; cursor:pointer;">
+  ✕
+</button>
+
   </div>
 
  <!-- WHAT CHANGES WITH NOVAK -->
@@ -1049,25 +1018,14 @@ html[data-theme="dark"] .aud-btn.active {
       </p>
     </div>
 
-    <!-- Close X -->
-    <button onclick="dismissWhatChanges()"
-      style="
-        position:absolute;
-        top:14px;
-        right:14px;
-        font-size:20px;
-        background:none;
-        border:none;
-        cursor:pointer;
-      "
-      aria-label="Hide What Changes With NOVAK">
-      ✕
-    </button>
+<button class="action-btn" onclick="hideSection('whatChangesCard','hideWhatChanges')">
+  ✅ Got it — Hide
+</button>
 
-  <!-- Confirm hide -->
-  <button class="action-btn" onclick="dismissWhatChanges()" style="margin-top:18px;">
-    ✅ Got it — Hide
-  </button>
+<button onclick="hideSection('whatChangesCard','hideWhatChanges')"
+  style="position:absolute; top:14px; right:14px; background:none; border:none; font-size:20px; cursor:pointer;">
+  ✕
+</button>
 
 </div> <!-- closes WHAT CHANGES WITH NOVAK only -->
 
@@ -1652,7 +1610,6 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
   today’s systems only detect it after harm.
 </p>
 
-
 <!-- =================================================== -->
 <!-- 8A. SIMPLE EXPLANATION -->
 <!-- =================================================== -->
@@ -1874,8 +1831,6 @@ NOVAK Protocol       | BEFORE action     | Input=Rule=Output match | ✅ YES
     </div> <!-- end SHA inner content -->
   </details>
 </div> <!-- end SHA Knowledge Center card -->
-
-
 
 <!-- ======================================================= -->
 <!-- STYLES for HASH BOXES, META, BUTTONS, WARN STATES -->
@@ -2544,7 +2499,6 @@ async function startAvalanche() {
      ⬇ Download Receipt JSON
   </a>
 </div>
-
 
 <!-- =============================================== -->
 <!-- 📌 WHAT CAN I DO WITH THIS HASH? -->
@@ -3607,7 +3561,6 @@ function startGame(which) {
   if (which === "fraud") return startFraudDetector();
 }
 
-
 <!-- ============================= -->
 <!-- 🎧 AUDIO PLAYER JS LOGIC      -->
 <!-- ============================= -->
@@ -3732,21 +3685,15 @@ Use this hash in NOVAK EIR / HVET to bind audio integrity.`;
   <p>
     The NOVAK Protocol exists because truth has intrinsic value — and wrongdoing,
     deception, and hidden harm must be revealed, not rewarded.
-  </p>
-
-  <br>
+  </p><br>
 
   <p>
     Mathematical integrity reflects moral integrity — honesty, accountability, and justice.
-  </p>
-
-  <br>
+  </p><br>
 
   <p style="font-weight:600;">
     Everything good in this work belongs to God. Everything flawed belongs to me.
-  </p>
-
-  <br>
+  </p><br>
 
   <p>
     May this technology protect the vulnerable, restrain corruption,
@@ -4555,7 +4502,6 @@ startStoryMode = function() {
   
 </script>
 
-
 <script>
 (function () {
   const autoToggle  = document.getElementById('autoVerifyToggle');
@@ -5358,6 +5304,41 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 
 });
+</script>
+
+<script>
+// -----------------------------
+// Remember Hide/Show State
+// -----------------------------
+const sections = [
+  { id: "whatIsNovakCard", key: "hideWhatIsNovak" },
+  { id: "whyNovakCard",    key: "hideWhyNovak" },
+  { id: "whatChangesCard", key: "hideWhatChanges" }
+];
+
+// Apply remembered state on load
+window.addEventListener("DOMContentLoaded", () => {
+  sections.forEach(sec => {
+    const el = document.getElementById(sec.id);
+    const hidden = localStorage.getItem(sec.key);
+
+    if (hidden === "true") {
+      el.style.display = "none";
+    }
+  });
+});
+
+// Hide function (called by buttons)
+function hideSection(id, key) {
+  document.getElementById(id).style.display = "none";
+  localStorage.setItem(key, "true");
+}
+
+// UN-hide function (if you want to expose a restore button later)
+function showSection(id, key) {
+  document.getElementById(id).style.display = "block";
+  localStorage.setItem(key, "false");
+}
 </script>
 
 </body>
