--- a/index.html
+++ b/index.html
@@ -3296,10 +3296,10 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 
 
       <!-- ----------------------------------------------- -->
-      <!-- SECTION 4 — No-Bullshit Summary                 -->
+      <!-- SECTION 4 — Summary                 -->
       <!-- ----------------------------------------------- -->
 
-      <h3>🧠 No-Bullshit Summary</h3>
+      <h3>🧠 Summary</h3>
       <p>
         Voting today cannot be safely done online or by phone because nothing checks integrity before a vote is
         accepted. NOVAK adds that missing layer: the system must mathematically prove a ballot’s correctness,
